apps/stackiq/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: stackiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: gitea-registry
      containers:
        - name: worker
          image: jethroservergit.duckdns.org/stackiq-team/worker:1.0.20 # {"$imagepolicy": "flux-system:worker"}
