apps/stackiq/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: stackiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gitea-registry
      containers:
        - name: backend
          image: jethroservergit.duckdns.org/stackiq-team/backend:1.0.18 # {"$imagepolicy": "flux-system:backend"}
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: stackiq
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
