apps/stackiq/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: stackiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitea-registry
      containers:
        - name: frontend
          image: jethroservergit.duckdns.org/stackiq-team/frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stackiq
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
