apps/stackiq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackiq-frontend
  namespace: stackiq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - secretName: stackiq-tls
      hosts:
        - stackiq.duckdns.org
  rules:
    - host: stackiq.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackiq-backend
  namespace: stackiq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - secretName: stackiq-tls
      hosts:
        - stackiq.duckdns.org
  rules:
    - host: stackiq.duckdns.org
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 4000
